[project]
name = "rexomni"
description = "A powerful ComfyUI custom node for integrating Rex-Omni multimodal AI models. This node provides seamless integration of Rex-Omni's advanced computer vision and natural language processing capabilities into your ComfyUI workflows."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["timm", "einops", "torch", "torchvision", "transformers", "ftfy", "regex", "pycocotools", "opencv-python", "matplotlib", "huggingface-hub", "shapely", "scipy", "pyclipper", "ninja"]

[project.urls]
Repository = "https://github.com/flybirdxx/ComfyUI-RexOmni"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/flybirdxx/ComfyUI-RexOmni/wiki"
"Bug Tracker" = "https://github.com/flybirdxx/ComfyUI-RexOmni/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-RexOmni"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

